--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "pg": "^8.11.5"
   },
   "engines": {
     "node": ">=18"
