Add core migration and funnel event seed scripts

--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "elysiav2",
   "version": "1.0.0",
   "private": true,
-  "description": "Servidor Express para servir arquivos est\u00e1ticos e expor vari\u00e1veis de ambiente.",
+  "description": "Servidor Express para servir arquivos estáticos e expor variáveis de ambiente.",
   "main": "server.js",
   "scripts": {
     "build": "echo \"no build\"",
     "start": "node server.js",
-    "migrate:only": "node scripts/migrate-only.js"
+    "migrate:only": "node scripts/migrate-only.js",
+    "migrate:core": "node scripts/migrate-core.js",
+    "seed:event": "node scripts/seed-dev-event.js"
   },
   "dependencies": {
     "express": "^4.19.2",
